++++++++++++++++++++++++
OFSwitch13 release notes
++++++++++++++++++++++++

This file contains OFSwitch13 release notes (most recent releases first).

Release 3.X.X (XXXXXXXXXXXX)
============================

- Including a new counter on the OFSwitch13StatsCalculator to measure the
  pipeline load in terms of packets.


Release 3.1.0 (May 29, 2017)
============================

- Improving the OFSwitch13Device with the PipelineCapacity attribute that can
  be used to limit the traffic throughput within the pipeline to a specific
  data rate.

- Improving the OFSwitch13Device with the FlowTableSize, GroupTableSize and
  MeterTableSize attributes, that can be used to define the maximum number of
  entries on pipeline tables.

- Improving the OFSwitch13Queue with the NumQueues attribute that can be used
  to define the number of output queues available for use.

- Updating the ofsoftswitch13 library to allow more entries on each datapath
  table (flow, meter, and group).

- Including the meter ID parameter on OFSwitch13Device::MeterDrop trace source.

- Including new trace sources and private member accessors on OFSwitch13Device
  that can be used for monitoring datapath performance.

- Renaming some OFSwitch13Device private member accessors.

- Refactoring the OFSwitch13StatsCalculator to dump statistics in a better way.

- Improving the logical port example with a stateless tunnel application.

- Adjust the size of queue interface to avoid dropping packets when we still
  have space on internal queues.

- Improving the way switches and controllers deals with TCP sockets from
  OpenFlow channels using the new OFSwitch13SocketHandler class.

- Updating the default TCAM delay attribute on switch device to better reflect
  real hardware operation.

- This version is compatible with ofsoftswitch13 library release v3.1.x and
  ns-3 version 3.26 (including patches). No backward compatibility with older
  ns-3 versions.


Release 3.0.0 (February 10, 2017)